Adicionado Links para as UCs

--- a/app/views/projects/simple_widget/_show_active.slim
+++ b/app/views/projects/simple_widget/_show_active.slim
@@ -9,19 +9,20 @@
           .col-md-12
             span #{project.name}
           .col-md-4
-            small.text-muted
-              i.fa.fa-folder-open-o   
-                b  UC:  
-                = project.subject.name
+            = link_to project.subject
+              small.text-muted
+                i.fa.fa-folder-open-o
+                  b  UC:
+                  = project.subject.name
           .col-md-3
             small.text-muted
-              i.fa.fa-clock-o  
-                b  Próxima entrega: 
+              i.fa.fa-clock-o
+                b  Próxima entrega:
                 = date_month_or_undef project.next_delivery
           - if type=="student"
             .col-md-5
               small.text-muted
-                i.fa.fa-tasks  
+                i.fa.fa-tasks
                   b  Progresso:
               .progress.progress-striped style="width: 20%; height:8px; margin:0 10px 0 10px; display:inline-block;"
                 .progress-bar style="width: #{(project.completed_phases_nr.to_f/project.phases_nr)*100}%"
@@ -29,16 +30,16 @@
           - else
             .col-md-3
               small.text-muted
-                i.fa.fa-tasks  
+                i.fa.fa-tasks
                   b  Progresso:
               .progress.progress-striped style="width: 10%; height:8px; margin:0 10px 0 10px; display:inline-block;"
                 .progress-bar style="width: #{(project.completed_phases_nr.to_f/project.phases_nr)*100}%"
               small.text-muted Fase #{project.next_phase_nr}/#{project.phases_nr}
             .col-md-2
               small.text-muted
-                i.fa.fa-pencil-square-o  
-                  b  Avaliações: 
+                i.fa.fa-pencil-square-o
+                  b  Avaliações:
                   - if project.pending_grades?
                     i.fa.fa-warning.text-warning
                   - else
-                    i.fa.fa-check.text-success 
+                    i.fa.fa-check.text-success
