--- a/app/views/projects/simple_widget/_show_not_opened.slim
+++ b/app/views/projects/simple_widget/_show_not_opened.slim
@@ -9,8 +9,9 @@
           .col-md-12
             span #{project.name}
           .col-md-12
-            small.text-muted
-              i.fa.fa-folder-open-o   
-                b  UC:  
-                = project.subject.name
+            = link_to project.subject
+              small.text-muted
+                i.fa.fa-folder-open-o
+                  b  UC:
+                  = project.subject.name
 
