--- a/app/views/projects/simple_widget/_show_upcoming.slim
+++ b/app/views/projects/simple_widget/_show_upcoming.slim
@@ -9,17 +9,18 @@
           .col-md-12
             span #{project.name}
           .col-md-4
-            small.text-muted
-              i.fa.fa-folder-open-o   
-                b  UC:  
-                = project.subject.name
+            = link_to project.subject
+              small.text-muted
+                i.fa.fa-folder-open-o
+                  b  UC:
+                  = project.subject.name
           .col-md-3
             small.text-muted
-              i.fa.fa-clock-o  
-                b  Data início: 
+              i.fa.fa-clock-o
+                b  Data início:
                 = date_month_or_undef project.begin_date
           .col-md-5
             small.text-muted
-              i.fa.fa-clock-o 
-                b  Primeira entrega: 
+              i.fa.fa-clock-o
+                b  Primeira entrega:
                 = date_month_or_undef project.next_delivery
