--- a/app/views/subjects/accordion_widget/_show.slim
+++ b/app/views/subjects/accordion_widget/_show.slim
@@ -5,7 +5,8 @@ li.list-group-item.clearfix
         i.fa.fa-folder
     .info-widget
       .pull-left.m-left-sm
-        span #{subject.name}
+        = link_to subject
+          span #{subject.name}
         br
           small.text-muted
             i.fa.fa-folder-open-o  #{subject.course.name}
