Correção no modal de uma nova UC

--- a/app/views/subjects/_modal_new.slim
+++ b/app/views/subjects/_modal_new.slim
@@ -3,7 +3,7 @@
     .modal-content
       .modal-header
         button.close aria-hidden="true" data-dismiss="modal" type="button"  ×
-        h4 Criar novo projeto
+        h4 Criar nova Unidade Curricular
       .modal-body style="padding: 0"
         .panel.panel-default
           = form_for subject, html: {multipart: true, class: "form-horizontal no-margin form-border"} do |f|
