--- a/app/views/pages/_navbar_not_logged.slim
+++ b/app/views/pages/_navbar_not_logged.slim
@@ -18,7 +18,7 @@ header.navbar.navbar-fixed-top.bg-white
         li
           a.top-link href="#" Sobre nós
         li
-          a.top-link href="#" Pesquisar projectos
+          a.top-link href="#{project_search_path}" Pesquisar projectos
         li 
           = link_to "Entrar",login_path, class: "top-link"
         li
