--- a/app/views/projects/show/_utilities.slim
+++ b/app/views/projects/show/_utilities.slim
@@ -1,11 +1,12 @@
 .row.project-utilities
   - if project.statement
-    = link_to show_file_path project.statement
-      .col-sm-6.col-md-6
-        .panel-stat3.bg-primary 
-          h5 Enunciado
-          .stat-icon
-            i.fa.fa-file-text-o.fa-2x
+    div property="associatedMedia" type="DataDownload"
+      = link_to show_file_path project.statement, property:"url"
+        .col-sm-6.col-md-6
+          .panel-stat3.bg-primary 
+            h5 property="name" Enunciado
+            .stat-icon
+              i.fa.fa-file-text-o.fa-2x
   - else
     .col-sm-6.col-md-6
       .panel-stat3.bg-primary style="opacity:0.2"
