--- a/app/views/phases/timeline_widget/_show.slim
+++ b/app/views/phases/timeline_widget/_show.slim
@@ -33,7 +33,7 @@
               i.fa.fa-info.fa-sm style="font-size:15px;margin-right:3px"
             small.text-muted style="font-size:12px"  Informações
           - if type=="teacher"
-            a.shortcut-link href="#{phase_path phase}"
+            a.shortcut-link href="#{phase_path phase}#editPhase"
               span.shortcut-icon
                 i.fa.fa-cogs style="font-size:15px;margin-right:3px"
               small.text-muted style="font-size:12px"  Editar
