--- a/app/views/phases/accordion_widget/_show.slim
+++ b/app/views/phases/accordion_widget/_show.slim
@@ -1,7 +1,7 @@
 .panel.panel-default
   .panel-heading
     .panel-title
-      a.accordion-toggle data-parent="#accordion" data-toggle="collapse" href="#Phase#{mode}#{phase.id}" class="#{"collapsed" if current_phase.id != phase.id}"
+      = link_to phase_path(phase)
         i.fa.fa-calendar class="#{phase.status_color}"
         b  #{phase.name}
         .pull-right 
@@ -20,17 +20,16 @@
             - else
               span.label.label-warning Pauta pendente
 
-.collapsed id="Phase#{mode}#{phase.id}" class="#{current_phase.id != phase.id ? "collapse" : "in"}" style="margin-top:5px"
-
-  - if mode=="deliveries"
-    = render "groups/accordion_widget", groups: phase.groups_with_deliveries, phase: phase
-  - else
-    = render "phases/accordion_widget/show/utilities", phase: phase, type: type
-    = render "phases/accordion_widget/show/description", phase: phase, type: type
-    = render "required_files/line_widget", required_files: phase.required_files, title: "Ficheiros obrigatórios", type: type
-    = render "phase_files/simple_widget", phase_files: phase.phase_files, title: "Ficheiros auxiliares", type: type
-    - if type == "student"
-      = render "deliveries/simple_widget", deliveries: phase.deliveries.where(group_id: group.id), title: "Entregas", project: phase.project, mode: "phase"
-    - if type == "teacher"
-      = render "groups/line_widget", groups: phase.groups_with_deliveries, title: "Grupos com entregas válidas"
-      = render "groups/line_widget", groups: phase.groups_without_deliveries, title: "Grupos sem entregas válidas"
+  - if phase.id == current_phase.id
+    - if mode=="deliveries"
+      = render "groups/accordion_widget", groups: phase.groups_with_deliveries, phase: phase
+    - else
+      = render "phases/accordion_widget/show/utilities", phase: phase, type: type
+      = render "phases/accordion_widget/show/description", phase: phase, type: type
+      = render "required_files/line_widget", required_files: phase.required_files, title: "Ficheiros obrigatórios", type: type
+      = render "phase_files/simple_widget", phase_files: phase.phase_files, title: "Ficheiros auxiliares", type: type
+      - if type == "student"
+        = render "deliveries/simple_widget", deliveries: phase.deliveries.where(group_id: group.id), title: "Entregas", project: phase.project, mode: "phase"
+      - if type == "teacher"
+        = render "groups/line_widget", groups: phase.groups_with_deliveries, title: "Grupos com entregas válidas"
+        = render "groups/line_widget", groups: phase.groups_without_deliveries, title: "Grupos sem entregas válidas"
