--- a/app/views/projects/index/_search_input.slim
+++ b/app/views/projects/index/_search_input.slim
@@ -1,4 +1,4 @@
-.fadeInDown.animation-delay2
+div
   = form_tag projects_path, method: :get do
     .input-group.m-bottom-md
       = text_field_tag 'search', "", class:"form-control", placeholder:"Pesquise pelo nome do projecto a procurar.", type:"text", value: params[:search]
