--- a/app/views/projects/index/search_results/_show.slim
+++ b/app/views/projects/index/search_results/_show.slim
@@ -1,4 +1,4 @@
-.panel.panel-default.fadeInDown.animation-delay2
+.panel.panel-default
   .panel-body
     = link_to "#{project.name}", project_path(project), class: "h4 inline-block" 
     .pull-right style="margin-top: 10px;"
