--- a/app/views/phases/accordion_widget/_show.slim
+++ b/app/views/phases/accordion_widget/_show.slim
@@ -4,16 +4,16 @@
       = link_to phase_path(phase)
         i.fa.fa-calendar class="#{phase.status_color}"
         b  #{phase.name}
-        .pull-right 
+        .pull-right
           - if type == "student"
-            b Avaliação: 
-            
+            b Avaliação:
+
             - if phase.grades
-              span.text-success #{phase.grade current_user.student.id} 
+              span.text-success #{phase.grade current_user.student.id}
             - else
               span.text-warning ?
             |  / #{(phase.value*20)/100} Valores
-          
+
           - if type == "teacher" and mode!="deliveries"
             - if phase.grades
               span.label.label-success Pauta publicada
@@ -29,7 +29,10 @@
       = render "required_files/line_widget", required_files: phase.required_files, title: "Ficheiros obrigatórios", type: type
       = render "phase_files/simple_widget", phase_files: phase.phase_files, title: "Ficheiros auxiliares", type: type
       - if type == "student"
-        = render "deliveries/simple_widget", deliveries: phase.deliveries.where(group_id: group.id), title: "Entregas", project: phase.project, mode: "phase"
+        -if group
+          = render "deliveries/simple_widget", deliveries: phase.deliveries.where(group_id: group.id), title: "Entregas", project: phase.project, mode: "phase"
+        - else
+          = render "deliveries/simple_widget", deliveries: [], title: "Entregas", project: phase.project, mode: "phase"
       - if type == "teacher"
         = render "groups/line_widget", groups: phase.groups_with_deliveries, title: "Grupos com entregas válidas"
         = render "groups/line_widget", groups: phase.groups_without_deliveries, title: "Grupos sem entregas válidas"
