Adds xsl and xls

--- a/app/views/grades/_projects.slim
+++ b/app/views/grades/_projects.slim
@@ -1,3 +1,10 @@
+=link_to export_project_grades_pdf_path, class:"btn btn-default pull-right",style:"margin: 5px"
+  i.fa.fa-exchange
+  |  Exportar PDF
+=link_to export_project_grades_path, class:"btn btn-default pull-right", style:"margin: 5px"
+  i.fa.fa-exchange
+  |  Exportar XLS
+
 table.table.table-striped.table-cm id="dataTable"
   thead
     tr
