--- a/app/views/projects/_stats.slim
+++ b/app/views/projects/_stats.slim
@@ -38,7 +38,7 @@
       span#serverloadCount> #{Student.all.count}
     h5 professores registados
     .stat-icon
-      i.fa.fa-hdd-o.fa-3x
+      i.fa.fa-user-md.fa-3x
     .refresh-button
       i.fa.fa-refresh
     .loading-overlay
@@ -49,7 +49,7 @@
       span#serverloadCount> #{Teacher.all.count}
     h5 alunos registados
     .stat-icon
-      i.fa.fa-hdd-o.fa-3x
+      i.fa.fa-user.fa-3x
     .refresh-button
       i.fa.fa-refresh
     .loading-overlay
